# atlas_ball_follower

./: README.md
flexbe_states_and_behaviors/: README.md
flexbe_states_and_behaviors/custom_flexbe_states/: CMakeLists.txt  package.xml  setup.py
flexbe_states_and_behaviors/custom_flexbe_states/src/custom_flexbe_states/: calculation_two_key_tate.py  publisher_float_state.py  static_input.py  vision_track_state.py
flexbe_states_and_behaviors/flexbe_loop_nodes/: CMakeLists.txt  package.xml
flexbe_states_and_behaviors/flexbe_loop_nodes/src/: atlas_example_node.cpp  chest_node.cpp
flexbe_states_and_behaviors/flexbe_test_behaviors/: README.md
flexbe_states_and_behaviors/flexbe_test_behaviors/flexbe_test_flexbe_behaviors/: CMakeLists.txt  package.xml  setup.py
flexbe_states_and_behaviors/flexbe_test_behaviors/flexbe_test_flexbe_behaviors/manifest/: example_behavior.xml  pub_wait_for_feedback.xml
flexbe_states_and_behaviors/flexbe_test_behaviors/flexbe_test_flexbe_behaviors/src/flexbe_test_flexbe_behaviors/: pub_wait_for_feedback_sm.py
flexbe_states_and_behaviors/flexbe_test_behaviors/flexbe_test_flexbe_states/: CMakeLists.txt  package.xml  setup.py
flexbe_states_and_behaviors/simple_test/: CMakeLists.txt  package.xml
flexbe_states_and_behaviors/simple_test/src/: chest_node.cpp
my_blob_tracking_pkg/launch/: my_mira_cmvision_tc.launch  start_blob_tracking.launch
my_blob_tracking_pkg/src/: solution_one.py  solution_two.py
perceptor/: CMakeLists.txt  package.xml
perceptor/launch/: launch.launch
perceptor/src/: perceptor_node.cpp
