<package format="2">
  <name>custom_flexbe_states</name>
  <version>0.0.0</version>
  <description>
     custom_flexbe_states provides a collection of states.
  </description>
  <maintainer email="davis@todo.com">Davis</maintainer>
	<license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>flexbe_core</depend>
  <depend>std_msgs</depend>

  <export>
    <flexbe_states />
  </export>

</package>
